@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: text.test,v 1.54 2008/12/19 15:33:40 dgp Exp $
+# RCS: @(#) $Id: text.test,v 1.55 2009/10/22 21:36:24 dkf Exp $
 
 package require tcltest 2.2
 eval tcltest::configure $argv
@@ -6079,7 +6079,18 @@ test text-27.17 {bug fix 1536735 - undo with empty text} -body {
 } -cleanup {
     destroy .t
 } -result {0 0 1 0}
-
+test text-27.18 {patch 1469210 - inserting after undo} -setup {
+    destroy .t
+} -body {
+    text .t -undo 1
+    .t insert end foo
+    .t edit modified 0
+    .t edit undo
+    .t insert end bar
+    .t edit modified
+} -cleanup {
+    destroy .t
+} -result 1
 
 test text-28.1 {bug fix - 624372, ControlUtfProc long lines} -body {
     pack [text .t -wrap none]
